--- a/source/index.html
+++ b/source/index.html
@@ -16,7 +16,7 @@
       </a>
       <nav class="main-nav">
         <ul class="main-nav__list site-list list">
-          <li class="site-list__item site-list__item--active">
+          <li class="site-list__item site-list__item-active">
             <a>Главная</a>
           </li>
           <li class="site-list__item">
@@ -36,67 +36,74 @@
       <h1 class="visually-hidden">Информация о городе</h1>
       <section class="main-promo">
         <h2 class="visually-hidden">Приветствие от города</h2>
-        <img class="main-promo__image" src="https://via.placeholder.com/150x150" width="456" height="350"
+        <img class="main-promo__image" src="https://via.placeholder.com/150x150" width="320" height="389"
           alt="Приветствие города">
       </section>
       <section class="main-features">
         <h2 class="visually-hidden">Преимущества города</h2>
-        <span class="main-features__title">Седона &mdash; небольшой городок в Аризоне, заслуживающий большего!</span>
-        <span class="main-features__description">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</span>
-        <ol class="main-features__list">
-          <li class="main-features__item">
-            <span class="main-features__title">Настоящий городок</span>
-            <span class="main-features__number">– №1 –</span>
-            <span class="main-features__text">Седона - не аттракцион для туристов, там течёт своя жизнь</span>
-            <img src="https://via.placeholder.com/150x150" width="800" height="256" alt="Вид на город">
-            <ul class="main-features__item-list">
-              <li>
-                <span class="main-features__title">Жильё</span>
+        <div class="main-features__wrapper">
+          <span class="main-features__title">Седона &mdash; небольшой городок в Аризоне, заслуживающий большего!</span>
+          <span class="main-features__description">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</span>
+        </div>
+        <ol class="main-features__list list">
+          <li>
+            <div class="main-features__item list">
+              <span class="main-features__title">Настоящий городок</span>
+              <span class="main-features__number">– №1 –</span>
+              <span class="main-features__text">Седона - не аттракцион для туристов, там течёт своя жизнь</span>
+            </div>
+            <img src="https://via.placeholder.com/150x150" width="320" height="260" alt="Вид на город">
+            <ul class="main-features__item-list list">
+              <li class="main-features__item-list_text">
+                <span class="main-features__title_margin">Жильё</span>
                 <span class="main-features__text">Рекомендуем пожить в настоящем мотеле, всё как в кино!</span>
               </li>
-              <li>
-                <span class="main-features__title">Еда</span>
+              <li class="main-features__item-list_text">
+                <span class="main-features__title_margin">Еда</span>
                 <span class="main-features__text">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</span>
               </li>
-              <li>
-                <span class="main-features__title">Сувениры</span>
+              <li class="main-features__item-list_text">
+                <span class="main-features__title_margin">Сувениры</span>
                 <span class="main-features__text">Не только китайского, но и местного производства!</span>
               </li>
             </ul>
           </li>
-          <li class="main-features__item">
-            <img src="https://via.placeholder.com/150x150" width="800" height="256"
-              alt="Вид достопримечательность Мост Дьявола">
-            <span class="main-features__title">Там есть Мост дьявола</span>
-            <span class="main-features__number">– №2 –</span>
-            <span class="main-features__text">Да, по нему можно пройти! Если конечно вы осмелитесь</span>
+          <li>
+            <img src="https://via.placeholder.com/150x150" width="320" height="260"
+              alt="Вид на достопримечательность Мост Дьявола">
+            <div class="main-features__item_grey list">
+              <span class="main-features__title">Там есть Мост дьявола</span>
+              <span class="main-features__number">– №2 –</span>
+              <span class="main-features__text">Да, по нему можно пройти! Если конечно вы осмелитесь</span>
+            </div>
           </li>
-          <li class="main-features__item">
+          <li class="main-features__item_grey list">
             <span class="main-features__title">Небольшая площадь</span>
             <span class="main-features__number">– № 3 –</span>
             <span class="main-features__text">Все достопримечательности находятся очень близко</span>
           </li>
-          <li class="main-features__item">
+          <li class="main-features__item_grey list">
             <span class="main-features__title">Красивая дорога</span>
             <span class="main-features__number">– № 4 –</span>
             <span class="main-features__text">Ехать в Седону из Лас-Вегаса совсем не скучно!</span>
           </li>
-          <li class="main-features__item">
+          <li class="main-features__item_grey list">
             <span class="main-features__title">Мало туристов</span>
             <span class="main-features__number">– № 5 –</span>
             <span class="main-features__text">Большинство едет в Гранд Каньон и толпится там</span>
           </li>
         </ol>
       </section>
-      <section>
-        <span>Заинтересовались?</span>
-        <span>Укажите предполагаемые даты поеждки, и мы покажем Вам лучшие предложения гостиниц в Седоне</span>
+      <section class="main-features__wrapper">
+        <h2 class="visually-hidden">Бронирование гостиницы</h2>
+        <span class="main-features__title">Заинтересовались?</span>
+        <span class="main-features__description">Укажите предполагаемые даты поездки, и мы покажем Вам лучшие предложения гостиниц в Седоне</span>
         <button type="submit" aria-label="Переход на страницу поиска гостиниц">Показать гостиницы</button>
       </section>
     </main>
     <footer class="page-footer">
       <p class="page-footer-text">#Visitsedona</p>
-      <ul class="page-footer__list" aria-label="Социальные сети">
+      <ul class="page-footer__list list" aria-label="Социальные сети">
         <li class="page-footer__item">
           <a href="#" aria-label="Перейти в аккаунт города в Twitter">
             <img src="" width="17" height="15" alt="Twitter">
