--- a/source/photo.html
+++ b/source/photo.html
@@ -41,7 +41,7 @@
       </section>
       <section class="main-media">
         <div class="main-features__wrapper">
-          <span class="main-features__title">Фото и видео</span2>
+          <span class="main-features__title">Фото и видео</span>
           <span class="main-features__description">Не можете решиться на путешествие из-за курса? Фотографии помогут Вам забыть о политике и экономике.</span>
         </div>
         <ul class="main-media__list list">
