переименованы файлы блоков, изменено подключение шрифтов, изменнены стили у страницы фото

--- a/source/form.html
+++ b/source/form.html
@@ -51,16 +51,16 @@
             <label for="firstName">
               <span>Имя*:</span>
             </label>
-            <input type="text" id="firstName" placeholder="Петр" name="firstName" aria-label="Указать имя" required>
+            <input type="text" id="first-name" placeholder="Петр" name="firstName" aria-label="Указать имя" required>
             <label for="lastName">
               <span>Фамилия*:</span>
             </label>
-            <input type="text" id="lastName" placeholder="Иванов" name="secondName" aria-label="Указать фамилию"
+            <input type="text" id="last-name" placeholder="Иванов" name="secondName" aria-label="Указать фамилию"
               required>
             <label for="middleName">
               <span>Отчество:</span>
             </label>
-            <input type="text" id="middleName" placeholder="Александрович" name="middleName"
+            <input type="text" id="middle-name" placeholder="Александрович" name="middleName"
               aria-label="Указать отчество">
           </fieldset>
           <fieldset>
@@ -79,13 +79,13 @@
           <fieldset>
             <legend>Ваше общее впечатление:</legend>
             <label for="viewPointPositive">Скорее положительное</label>
-            <input type="radio" id="viewPointPositive" name="answer" value="viewPointPositive"
+            <input type="radio" id="view-point-positive" name="answer" value="viewPointPositive"
               aria-label="Указать положительное" checked>
-            <label for="viewPointNegative">Скорее отрицательное</label>
-            <input type="radio" id="viewPointNegative" name="answer" value="viewPointNegative"
+            <label for="view-point-negative">Скорее отрицательное</label>
+            <input type="radio" id="view-point-negative" name="answer" value="viewPointNegative"
               aria-label="Указать отрицательное">
-            <label for="viewPointDifficult">Затрудняюсь ответить</label>
-            <input type="radio" id="viewPointDifficult" name="answer" value="viewPointDifficult"
+            <label for="view-point-difficult">Затрудняюсь ответить</label>
+            <input type="radio" id="view-point-difficult" name="answer" value="viewPointDifficult"
               aria-label="Затрудняюсь ответить">
           </fieldset>
           <fieldset>
