--- a/source/photo.html
+++ b/source/photo.html
@@ -49,33 +49,33 @@
             <a href="#" aria-label="Открыть полный размер фото"><img src="https://via.placeholder.com/150x150"
                 width="280" height="280" alt="Фото дороги"></a>
             <span class="main-media__text">Неродные просторы</span>
-            <span class="main-media__text-author">Автор фото: Борис</span>
+            <span class="main-media__text main-media__text_size_small">Автор фото: Борис</span>
             <button type="button" class="main-media__button"></button>
-            <span class="main-media__likes-number">1350</span>
+            <span class="main-media__text main-media__size_weight">1350</span>
           </li>
           <li class="main-media__item">
             <a href="#" aria-label="Открыть полный размер фото"><img src="https://via.placeholder.com/150x150"
                 width="280" height="280" alt="Фото растения"></a>
             <span class="main-media__text">Местная растительность</span>
-            <span class="main-media__text-author">Автор фото: Сергей</span>
+            <span class="main-media__text main-media__text_size_small">Автор фото: Сергей</span>
             <button type="button" class="main-media__button"></button>
-            <span class="main-media__likes-number">143</span>
+            <span class="main-media__text main-media__size_weight">143</span>
           </li>
           <li class="main-media__item">
             <a href="#" aria-label="Открыть полный размер фото"><img src="https://via.placeholder.com/150x150"
                 width="280" height="280" alt="Фото дороги"></a>
             <span class="main-media__text">Дорога на север</span>
-            <span class="main-media__text-author">Автор фото: Петр</span>
+            <span class="main-media__text main-media__text_size_small">Автор фото: Петр</span>
             <button type="button" class="main-media__button"></button>
-            <span class="main-media__likes-number">96</span>
+            <span class="main-media__text main-media__size_weight">96</span>
           </li>
           <li class="main-media__item">
             <a href="#" aria-label="Открыть полный размер фото"><img src="https://via.placeholder.com/150x150"
                 width="280" height="280" alt="Фото достопримечательности Мост Дьявола"></a>
             <span class="main-media__text">Мост Дьявола</span>
-            <span class="main-media__text-author">Автор фото: Антон</span>
+            <span class="main-media__text main-media__text_size_small">Автор фото: Антон</span>
             <button type="button" class="main-media__button"></button>
-            <span class="main-media__likes-number">254</span>
+            <span class="main-media__text main-media__size_weight">254</span>
           </li>
         </ul>
       </section>
