исправлены ссылки в логотипе, изменны классы, исправлено натменование модификаторов

--- a/source/photo.html
+++ b/source/photo.html
@@ -5,27 +5,26 @@
   <meta charset="utf-8">
   <title>HTML Academy: Седона</title>
   <link rel="stylesheet" href="css/style.css">
-  <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
 <body class="page">
   <div class="container">
     <header class="page-header">
-      <a class="page-header__logo">
-        <img src="https://htmlacademy.ru/intensive/adaptive" width="101" height="84" alt="Логотип города Седона">
+      <a href="index.html" class="page-logo">
+        <img src="https://via.placeholder.com/150x150" width="101" height="84" alt="Логотип города Седона">
       </a>
       <nav class="main-nav">
-        <ul class="main-nav__list site-list list">
-          <li class="site-list__item">
+        <ul class="nav-list list">
+          <li class="nav-list__item">
             <a href="index.html">Главная</a>
           </li>
-          <li class="site-list__item site-list__item-active">
+          <li class="nav-list__item nav-list__item--active">
             <a>Фото и Видео</a>
           </li>
-          <li class="site-list__item">
+          <li class="nav-list__item">
             <a href="form.html">Форма отзыва</a>
           </li>
-          <li class="site-list__item">
+          <li class="nav-list__item">
             <a href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
           </li>
         </ul>
@@ -40,49 +39,49 @@
           alt="Приветствие города">
       </section>
       <section class="main-media">
-        <div class="main-features__wrapper">
-          <span class="main-features__title">Фото и видео</span>
-          <span class="main-features__description">Не можете решиться на путешествие из-за курса? Фотографии помогут Вам забыть о политике и экономике.</span>
+        <div class="features-wrapper">
+          <span class="features__title">Фото и видео</span>
+          <span class="features__description">Не можете решиться на путешествие из-за курса? Фотографии помогут Вам забыть о политике и экономике.</span>
         </div>
         <ul class="main-media__list list">
-          <li class="main-media__item">
+          <li class="main-media-item">
             <a href="#" aria-label="Открыть полный размер фото"><img src="https://via.placeholder.com/150x150"
                 width="280" height="280" alt="Фото дороги"></a>
             <span class="main-media__text">Неродные просторы</span>
-            <span class="main-media__text main-media__text_size_small">Автор фото: Борис</span>
+            <span class="main-media__text main-media__text--size-small">Автор фото: Борис</span>
             <button type="button" class="main-media__button"></button>
-            <span class="main-media__text main-media__size_weight">1350</span>
+            <span class="main-media__text main-media__text--size-weight">1350</span>
           </li>
           <li class="main-media__item">
             <a href="#" aria-label="Открыть полный размер фото"><img src="https://via.placeholder.com/150x150"
                 width="280" height="280" alt="Фото растения"></a>
             <span class="main-media__text">Местная растительность</span>
-            <span class="main-media__text main-media__text_size_small">Автор фото: Сергей</span>
+            <span class="main-media__text main-media__text--size-small">Автор фото: Сергей</span>
             <button type="button" class="main-media__button"></button>
-            <span class="main-media__text main-media__size_weight">143</span>
+            <span class="main-media__text main-media__text--size-weight">143</span>
           </li>
           <li class="main-media__item">
             <a href="#" aria-label="Открыть полный размер фото"><img src="https://via.placeholder.com/150x150"
                 width="280" height="280" alt="Фото дороги"></a>
             <span class="main-media__text">Дорога на север</span>
-            <span class="main-media__text main-media__text_size_small">Автор фото: Петр</span>
+            <span class="main-media__text main-media__text--size-small">Автор фото: Петр</span>
             <button type="button" class="main-media__button"></button>
-            <span class="main-media__text main-media__size_weight">96</span>
+            <span class="main-media__text main-media__text--size-weight">96</span>
           </li>
           <li class="main-media__item">
             <a href="#" aria-label="Открыть полный размер фото"><img src="https://via.placeholder.com/150x150"
                 width="280" height="280" alt="Фото достопримечательности Мост Дьявола"></a>
             <span class="main-media__text">Мост Дьявола</span>
-            <span class="main-media__text main-media__text_size_small">Автор фото: Антон</span>
+            <span class="main-media__text main-media__text--size-small">Автор фото: Антон</span>
             <button type="button" class="main-media__button"></button>
-            <span class="main-media__text main-media__size_weight">254</span>
+            <span class="main-media__text main-media__text--size-weight">254</span>
           </li>
         </ul>
       </section>
       <section>
-        <div class="main-features__wrapper">
-          <span class="main-features__title">Все еще сомневаетесь?</span>
-          <span class="main-features__description">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!</span>
+        <div class="features-wrapper">
+          <span class="features__title">Все еще сомневаетесь?</span>
+          <span class="features__description">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!</span>
         </div>
       </section>
       <footer class="page-footer">
