--- a/source/form.html
+++ b/source/form.html
@@ -5,27 +5,26 @@
   <meta charset="utf-8">
   <title>HTML Academy: Седона</title>
   <link rel="stylesheet" href="css/style.css">
-  <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
 <body class="page">
   <div class="container">
     <header class="page-header">
-      <a class="page-header__logo">
-        <img src="https://htmlacademy.ru/intensive/adaptive" width="101" height="84" alt="Логотип города Седона">
+      <a href="index.html" class="page-logo">
+        <img src="https://via.placeholder.com/150x150" width="101" height="84" alt="Логотип города Седона">
       </a>
       <nav class="main-nav">
-        <ul class="main-nav__list site-list list">
-          <li class="site-list__item">
+        <ul class="nav__list list">
+          <li class="nav-list__item">
             <a href="index.html">Главная</a>
           </li>
-          <li class="site-list__item">
+          <li class="nav-list__item">
             <a href="photo.html">Фото и Видео</a>
           </li>
-          <li class="site-list__item site-list__item-active">
+          <li class="nav-list__item nav-list__item--active">
             <a>Форма отзыва</a>
           </li>
-          <li class="site-list__item">
+          <li class="nav-list__item">
             <a href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
           </li>
         </ul>
@@ -48,16 +47,16 @@
         <form action="https://echo.htmlacademy.ru/courses" method="post" id="formfield">
           <fieldset>
             <legend>Представьтесь</legend>
-            <label for="firstName">
+            <label for="firstN-name">
               <span>Имя*:</span>
             </label>
             <input type="text" id="first-name" placeholder="Петр" name="firstName" aria-label="Указать имя" required>
-            <label for="lastName">
+            <label for="last-name">
               <span>Фамилия*:</span>
             </label>
             <input type="text" id="last-name" placeholder="Иванов" name="secondName" aria-label="Указать фамилию"
               required>
-            <label for="middleName">
+            <label for="middle-name">
               <span>Отчество:</span>
             </label>
             <input type="text" id="middle-name" placeholder="Александрович" name="middleName"
@@ -78,7 +77,7 @@
           </fieldset>
           <fieldset>
             <legend>Ваше общее впечатление:</legend>
-            <label for="viewPointPositive">Скорее положительное</label>
+            <label for="view-point-positive">Скорее положительное</label>
             <input type="radio" id="view-point-positive" name="answer" value="viewPointPositive"
               aria-label="Указать положительное" checked>
             <label for="view-point-negative">Скорее отрицательное</label>
@@ -101,7 +100,7 @@
           </fieldset>
           <fieldset>
             <legend>Опишите свои эмоции:</legend>
-            <textarea form="formfield" placeholder="Опишите подробно все свои восторги" cols="25"></textarea>
+            <textarea form="formfield" placeholder="Опишите подробно все свои восторги" cols="25" aria-label="Описать свои впечатления от поездки"></textarea>
           </fieldset>
           <button type="submit" aria-label="Отправить указанные данные">Отправить отзыв</button>
         </form>
