--- a/source/index.html
+++ b/source/index.html
@@ -5,27 +5,26 @@
   <meta charset="utf-8">
   <title>HTML Academy: Седона</title>
   <link rel="stylesheet" href="css/style.css">
-  <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
 <body class="page">
   <div class="container">
     <header class="page-header">
-      <a class="page-header__logo">
-        <img src="https://htmlacademy.ru/intensive/adaptive" width="101" height="84" alt="Логотип города Седона">
+      <a class="page-logo">
+        <img src="https://via.placeholder.com/150x150" width="101" height="84" alt="Логотип города Седона">
       </a>
       <nav class="main-nav">
-        <ul class="main-nav__list site-list list">
-          <li class="site-list__item site-list__item-active">
+        <ul class="nav-list list">
+          <li class="nav-list__item nav-list__item--active">
             <a>Главная</a>
           </li>
-          <li class="site-list__item">
+          <li class="nav-list__item">
             <a href="photo.html">Фото и Видео</a>
           </li>
-          <li class="site-list__item">
+          <li class="nav-list__item">
             <a href="form.html">Форма отзыва</a>
           </li>
-          <li class="site-list__item">
+          <li class="nav-list__item">
             <a href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
           </li>
         </ul>
@@ -39,65 +38,64 @@
         <img class="main-promo__image" src="https://via.placeholder.com/150x150" width="320" height="389"
           alt="Приветствие города">
       </section>
-      <section class="main-features">
+      <section class="features">
         <h2 class="visually-hidden">Преимущества города</h2>
-        <div class="main-features__wrapper">
-          <span class="main-features__title">Седона &mdash; небольшой городок в Аризоне, заслуживающий большего!</span>
-          <span class="main-features__description">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</span>
+        <div class="features-wrapper">
+          <span class="features__title">Седона &mdash; небольшой городок в Аризоне, заслуживающий большего!</span>
+          <span class="features__description">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</span>
         </div>
-        <ol class="main-features__list list">
+        <ol class="features__list list">
           <li>
-            <div class="main-features__item list">
-              <span class="main-features__title">Настоящий городок</span>
-              <span class="main-features__number">– №1 –</span>
-              <span class="main-features__text">Седона - не аттракцион для туристов, там течёт своя жизнь</span>
+            <div class="features-item list">
+              <span class="features__title">Настоящий городок</span>
+              <span class="features__text">– №1 –</span>
+              <span class="features__text">Седона - не аттракцион для туристов, там течёт своя жизнь</span>
             </div>
             <img src="https://via.placeholder.com/150x150" width="320" height="260" alt="Вид на город">
-            <ul class="main-features__item-list list">
-              <li class="main-features__item-list_text">
-                <span class="main-features__title_margin">Жильё</span>
-                <span class="main-features__text">Рекомендуем пожить в настоящем мотеле, всё как в кино!</span>
+            <ul class="features-item-list list">
+              <li class="features-item-list-text">
+                <span class="features__title features__title--margin">Жильё</span>
+                <span class="features__text">Рекомендуем пожить в настоящем мотеле, всё как в кино!</span>
               </li>
-              <li class="main-features__item-list_text">
-                <span class="main-features__title_margin">Еда</span>
-                <span class="main-features__text">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</span>
+              <li class="features-item-list-text">
+                <span class="features__title features__title--margin">Еда</span>
+                <span class="features__text">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</span>
               </li>
-              <li class="main-features__item-list_text">
-                <span class="main-features__title_margin">Сувениры</span>
-                <span class="main-features__text">Не только китайского, но и местного производства!</span>
+              <li class="features-item-list-text">
+                <span class="features__title features__title--margin">Сувениры</span>
+                <span class="features__text">Не только китайского, но и местного производства!</span>
               </li>
             </ul>
           </li>
           <li>
-            <img src="https://via.placeholder.com/150x150" width="320" height="260"
-              alt="Вид на достопримечательность Мост Дьявола">
-            <div class="main-features__item_grey list">
-              <span class="main-features__title">Там есть Мост дьявола</span>
-              <span class="main-features__number">– №2 –</span>
-              <span class="main-features__text">Да, по нему можно пройти! Если конечно вы осмелитесь</span>
+            <div class="features-item list">
+              <span class="features__title">Там есть Мост дьявола</span>
+              <span class="features__text">– №2 –</span>
+              <span class="features__text">Да, по нему можно пройти! Если конечно вы осмелитесь</span>
             </div>
+            <img src="https://via.placeholder.com/150x150" width="320" height="260" alt="Вид на достопримечательность Мост Дьявола">
           </li>
-          <li class="main-features__item_grey list">
-            <span class="main-features__title">Небольшая площадь</span>
-            <span class="main-features__number">– № 3 –</span>
-            <span class="main-features__text">Все достопримечательности находятся очень близко</span>
+          <li class="features-item features-item--color list">
+            <span class="features__title">Небольшая площадь</span>
+            <span class="features__text">– № 3 –</span>
+            <span class="features__text">Все достопримечательности находятся очень близко</span>
           </li>
-          <li class="main-features__item_grey list">
-            <span class="main-features__title">Красивая дорога</span>
-            <span class="main-features__number">– № 4 –</span>
-            <span class="main-features__text">Ехать в Седону из Лас-Вегаса совсем не скучно!</span>
+          <li class="features-item features-item--color list">
+            <span class="features__title">Красивая дорога</span>
+            <span class="features__text">– № 4 –</span>
+            <span class="features__text">Ехать в Седону из Лас-Вегаса совсем не скучно!</span>
           </li>
-          <li class="main-features__item_grey list">
-            <span class="main-features__title">Мало туристов</span>
-            <span class="main-features__number">– № 5 –</span>
-            <span class="main-features__text">Большинство едет в Гранд Каньон и толпится там</span>
+          <li class="features-item features-item--color list">
+            <span class="features__title">Мало туристов</span>
+            <span class="features__text">– № 5 –</span>
+            <span class="features__text">Большинство едет в Гранд Каньон и толпится там</span>
           </li>
         </ol>
       </section>
-      <section class="main-features__wrapper">
+      <section class="features-wrapper">
         <h2 class="visually-hidden">Бронирование гостиницы</h2>
-        <span class="main-features__title">Заинтересовались?</span>
-        <span class="main-features__description">Укажите предполагаемые даты поездки, и мы покажем Вам лучшие предложения гостиниц в Седоне</span>
+        <span class="features__title">Заинтересовались?</span>
+        <span class="features__description">Укажите предполагаемые даты поездки, и мы покажем Вам лучшие предложения гостиниц в Седоне</span>
         <button type="submit" aria-label="Переход на страницу поиска гостиниц">Показать гостиницы</button>
       </section>
     </main>
